<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MainActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/circle_item" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" />

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:elevation="20dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/label_bhandara"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/label_active"
                android:textStyle="bold"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/txt_active_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_active"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:textSize="18sp"
                android:text="@string/label_dummy_data" />


            <TextView
                android:id="@+id/txt_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_active_data"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_confirmed"
                android:textStyle="bold"

                android:textColor="@color/yellow" />

            <TextView
                android:id="@+id/txt_confirmed_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_confirmed"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:textSize="18sp"

                android:text="@string/label_dummy_data" />


            <TextView
                android:id="@+id/txt_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_confirmed_data"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_recovered"
                android:textStyle="bold"

                android:textColor="@color/green" />

            <TextView
                android:id="@+id/txt_recovered_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_recovered"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:textSize="18sp"

                android:text="@string/label_dummy_data" />


            <TextView
                android:id="@+id/txt_deceased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_recovered_data"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/label_deceased"
                android:textStyle="bold"

                android:textColor="@color/red" />

            <TextView
                android:id="@+id/txt_deceased_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_deceased"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"

                android:text="@string/label_dummy_data" />

            <org.eazegraph.lib.charts.PieChart xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pie_chart"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_below="@+id/txt_city_name"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/txt_confirmed"
                android:padding="6dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>